Fixed layout issue in domain section

--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,7 @@ a {
     outline: 0;
     text-transform: uppercase;
     text-align: center;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     border: 0;
     border-radius: 40px;
     cursor: pointer;
@@ -294,6 +294,7 @@ a {
     border: 0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
 }
 
 .input-group .btn {
@@ -738,8 +739,9 @@ a {
 }
 
 .block-domain__prices {
+    color: var(--headings-color);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 6rem);
     font-size: 2rem;
     font-weight: 600;
